Minor edit for JDK1.4 compliance